Fix a bug on safari browser

--- a/src/index.css
+++ b/src/index.css
@@ -332,6 +332,9 @@ input.input::placeholder {
 input.input:focus {
   outline-width: 0px;
 }
+input.input::-moz-focus-outer {
+  outline-width: 0px;
+}
 p.input-helper-text {
   color: var(--black-800);
   font-size: 0.9rem;
